fix: remove spill of dialog in header when closed

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ main {
 /* Add book dialog */
 
 .add-book-dialog {
+  display: none;
   background-color: white;
   box-shadow: 0px 0px 4px 0px rgba(80, 80, 80, 0.5);;
   border: none;
@@ -198,13 +199,16 @@ main {
   height: 27rem;
   width: 50rem;
   min-width: 25rem;
-  display: flex;
   flex-direction: column;
   position: absolute;
-  top: 7rem;
+  top: 5rem;
   justify-self: center;
   padding: 2rem;
   gap: 1rem;
+}
+
+.add-book-dialog[open] {
+  display: flex;
 }
 
 .book-form {
@@ -267,6 +271,7 @@ form button:hover {
 /* Delete book dialog */
 
 .delete-book-dialog {
+  display: none;
   background-color: white;
   box-shadow: 0px 0px 4px 0px rgba(80, 80, 80, 0.5);;
   border: none;
@@ -274,13 +279,16 @@ form button:hover {
   min-height: 27rem;
   width: 36rem;
   min-width: 25rem;
-  display: flex;
   flex-direction: column;
   position: absolute;
-  top: 7rem;
+  top: 5rem; 
   justify-self: center;
   padding: 2rem;
   gap: 1rem;
+}
+
+.delete-book-dialog[open] {
+  display: flex;
 }
 
 .delete-book-form {
